# kafka-connect-py

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: release.yaml  tests.yaml
docs/: examples.md
src/kafka_connect/: __init__.py  cli.py  kafka_connect.py
tests/: test_kafka_connect.py
tests/e2e/: bad-create-connector.json  confluent-platform.yaml  cp-setup.yaml  create-connector.json  setup.sh  teardown.sh  update-connector.json
