[tool.poetry]
name = "kafka-connect"
version = "0.1.0"
description = "A client for the Confluent Platform Kafka Connect REST API."
authors = ["Aidan Melen <aidan-melen@protonmail.com>"]
license = "MIT"
packages = [{include = "kafka_connect", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
mock = "^4.0.3"

[tool.poetry.scripts]
kafka-connect = "kafka_connect.cli:cli"
kafkacon = "kafka_connect.cli:cli"
kcon = "kafka_connect.cli:cli"
kc = "kafka_connect.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"