[tool.poetry]
name = "kafka-connect-py"
version = "0.7.2"
description = "A client for the Confluent Platform Kafka Connect REST API."
authors = ["Aidan Melen <aidan-melen@protonmail.com>"]
readme = "README.md"
homepage = "https://github.com/aidanmelen/kafka-connect-py"
repository = "https://github.com/aidanmelen/kafka-connect-py"
license = "MIT"
packages = [{include = "kafka_connect", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
mock = "^4.0.3"

[tool.poetry.scripts]
kc = "kafka_connect.cli:cli"
kafka-connect = "kafka_connect.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"